Update hero and footer text to include full name "Andrew Herriot"

--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
   <!-- ── Hero ── -->
   <section class="hero">
     <div class="hero-content">
-      <p class="hero-label">The Memoirs of Andrew</p>
+      <p class="hero-label">The Memoirs of Andrew Herriot</p>
       <h1 class="hero-title">
         My Living<br>Soundtrack
         <em>Past, Present &amp; Perpetual</em>
@@ -534,7 +534,7 @@
   <!-- ── Footer ── -->
   <footer>
     <p class="footer-note">"Music is the soundtrack of your life."</p>
-    <p class="footer-sub">The memoirs of Andrew, in his own words</p>
+    <p class="footer-sub">The memoirs of Andrew Herriot, in his own words</p>
   </footer>
 
   <script>
