--- a/index.html
+++ b/index.html
@@ -4,7 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Andrew's Memoirs — My Living Soundtrack</title>
-  <meta name="description" content="The memoirs of Andrew — a life told through jazz, music, and memory.">
+  <meta name="description" content="The memoirs of Andrew Herriot — a life told through jazz, music, and memory. Download the e-books.">
+
+  <!-- Open Graph (Facebook, LinkedIn, Slack, Discord, iMessage, etc.) -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="My Living Soundtrack — The Memoirs of Andrew Herriot">
+  <meta property="og:description" content="A life told through jazz — the records, the stages, the late-night sessions, and every note in between.">
+  <meta property="og:url" content="https://genobear.github.io/Andrew-memoirs/">
+  <meta property="og:site_name" content="Andrew Herriot's Memoirs">
+  <meta property="og:image" content="https://genobear.github.io/Andrew-memoirs/og-image.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+
+  <!-- Twitter / X -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="My Living Soundtrack — The Memoirs of Andrew Herriot">
+  <meta name="twitter:description" content="A life told through jazz — the records, the stages, the late-night sessions, and every note in between.">
+  <meta name="twitter:image" content="https://genobear.github.io/Andrew-memoirs/og-image.png">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;0,900;1,400;1,700&family=Source+Serif+4:ital,opsz,wght@0,8..60,300;0,8..60,400;1,8..60,300;1,8..60,400&family=Bebas+Neue&display=swap" rel="stylesheet">
