--- a/index.html
+++ b/index.html
@@ -51,9 +51,6 @@
       font-weight: 300;
       line-height: 1.7;
       overflow-x: hidden;
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
     }
 
     /* ── Noise overlay ── */
@@ -79,6 +76,7 @@
       align-items: center;
       text-align: center;
       padding: 2rem;
+      overflow: hidden;
     }
 
     /* Vinyl grooves background */
@@ -177,7 +175,7 @@
     }
 
     .scroll-hint {
-      position: absolute;
+      position: fixed;
       bottom: 2.5rem;
       left: 50%;
       transform: translateX(-50%);
@@ -189,9 +187,18 @@
       font-family: 'Bebas Neue', sans-serif;
       font-size: 0.7rem;
       letter-spacing: 0.3em;
+      padding-left: 0.3em;
+      --center-offset: -50%;
       text-transform: uppercase;
       opacity: 0;
       animation: fadeUp 1s 1.3s ease forwards;
+      transition: opacity 0.4s ease;
+      z-index: 10;
+    }
+
+    .scroll-hint.hidden {
+      opacity: 0 !important;
+      pointer-events: none;
     }
 
     .scroll-hint span {
@@ -397,7 +404,7 @@
       text-align: center;
       padding: 4rem 2rem 3rem;
       border-top: 1px solid rgba(201, 168, 76, 0.08);
-      margin-top: auto;
+      margin-top: 4rem;
     }
 
     .footer-note {
@@ -433,8 +440,8 @@
 
     /* ── Animations ── */
     @keyframes fadeUp {
-      from { opacity: 0; transform: translateY(24px); }
-      to   { opacity: 1; transform: translateY(0); }
+      from { opacity: 0; transform: translateY(24px) translateX(var(--center-offset, 0)); }
+      to   { opacity: 1; transform: translateY(0) translateX(var(--center-offset, 0)); }
     }
 
     .reveal {
@@ -558,6 +565,12 @@
   </footer>
 
   <script>
+    // Hide scroll hint on scroll
+    const scrollHint = document.querySelector('.scroll-hint');
+    window.addEventListener('scroll', () => {
+      scrollHint.classList.toggle('hidden', window.scrollY > 100);
+    }, { passive: true });
+
     // Scroll reveal
     const observer = new IntersectionObserver((entries) => {
       entries.forEach(e => { if (e.isIntersecting) e.target.classList.add('visible'); });
