--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
   <meta name="twitter:description" content="A life told through jazz — the records, the stages, the late-night sessions, and every note in between.">
   <meta name="twitter:image" content="https://genobear.github.io/Andrew-memoirs/og-image.png">
 
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>♪</text></svg>">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;0,900;1,400;1,700&family=Source+Serif+4:ital,opsz,wght@0,8..60,300;0,8..60,400;1,8..60,300;1,8..60,400&family=Bebas+Neue&display=swap" rel="stylesheet">
