--- a/index.html
+++ b/index.html
@@ -457,6 +457,40 @@
       transform: translateY(0);
     }
 
+    /* Hide scroll hint when viewport is too short for the content.
+       Title scales via clamp(2.8rem, 8vw, 6.5rem), so wider viewports
+       produce taller content and need more vertical room. */
+    @media (max-width: 399px) and (max-height: 561px) {
+      .scroll-hint { display: none; }
+    }
+    @media (min-width: 400px) and (max-width: 499px) and (max-height: 514px) {
+      .scroll-hint { display: none; }
+    }
+    @media (min-width: 500px) and (max-width: 599px) and (max-height: 487px) {
+      .scroll-hint { display: none; }
+    }
+    @media (min-width: 600px) and (max-width: 699px) and (max-height: 507px) {
+      .scroll-hint { display: none; }
+    }
+    @media (min-width: 700px) and (max-width: 799px) and (max-height: 530px) {
+      .scroll-hint { display: none; }
+    }
+    @media (min-width: 800px) and (max-width: 899px) and (max-height: 557px) {
+      .scroll-hint { display: none; }
+    }
+    @media (min-width: 900px) and (max-width: 999px) and (max-height: 572px) {
+      .scroll-hint { display: none; }
+    }
+    @media (min-width: 1000px) and (max-width: 1099px) and (max-height: 603px) {
+      .scroll-hint { display: none; }
+    }
+    @media (min-width: 1100px) and (max-width: 1199px) and (max-height: 625px) {
+      .scroll-hint { display: none; }
+    }
+    @media (min-width: 1200px) and (max-height: 670px) {
+      .scroll-hint { display: none; }
+    }
+
     /* ── Responsive ── */
     @media (max-width: 600px) {
       .section { padding: 4rem 1.5rem; }
